# ide-sync-pro

./: BACKUP_SYSTEM.md  README.md  SUPPORTED_EDITORS.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  history.rs  ide.rs  lib.rs  main.rs  models.rs  sync.rs
src/components/dashboard/: Dashboard.tsx
src/components/layout/: AppLayout.tsx
src/components/settings/: SettingsView.tsx
src/components/ui/: badge.tsx  button.tsx  progress.tsx
