[package]
name = "ide-sync-pro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ide_sync_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
walkdir = "2.4"
# jsonc-parser allows parsing JSON with comments (standard in VS Code)
jsonc-parser = { version = "0.23", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
